--- a/box.css
+++ b/box.css
@@ -4,9 +4,13 @@
     width: 150px;
     height: 150px;
     margin: 10px;
+   position: absolute;
+    
 }
-.container {
+.booox {
     background-color: blue;
     width: 500px;
     height: 500px;
+    position: relative;
+
 }
