--- a/nike.css
+++ b/nike.css
@@ -51,4 +51,34 @@ top: 0px;
     margin: 30px;
     left: 0px;
 }
+.align {
+    text-align: center;
+    font-size: 40px;
+}
+.gg {
+    width: 100vw;
+    height: 700px;
 
+}
+/* .zurag {
+    width: 100vw;
+   
+} */
+.tailbar {
+  
+}
+.contai{
+     position: relative;
+     
+}
+      
+.p{position: absolute;
+    bottom: 20px;
+}
+p{
+    color: aliceblue;
+}
+.zurg {
+    width: 100vw;
+    height: 900px;
+}
