--- a/box.css
+++ b/box.css
@@ -1,16 +1,3 @@
-.box {
-    color: gold;
-    background-color: aquamarine;
-    width: 150px;
-    height: 150px;
-    margin: 10px;
-   position: absolute;
-    
-}
-.booox {
-    background-color: blue;
-    width: 500px;
-    height: 500px;
-    position: relative;
-
+.white {
+    color: rgb(184, 46, 36);
 }
