--- a/nike.css
+++ b/nike.css
@@ -4,7 +4,8 @@
   font-size: 25px;
 
   /* font-style: italic; */}
-div a {text-decoration: none;
+  div a {
+    text-decoration: none;
     font-size: 20px;
 color: rgb(0, 0, 0);
 flex-direction: column;
@@ -28,7 +29,15 @@ top: 0; left: 0;
 } */
 .logo {
     display: flex;
-    justify-content: flex-start;
+    justify-content: flex-start;  
+}
+.usegg a:hover {
+    border-bottom: 2px solid black;
+    text-decoration: none;
+    font-size: 20px;
+    flex-direction: column;
+justify-content: space-between;
+margin: 25px;
 }
 .search {
     display: flex;
@@ -51,9 +60,20 @@ top: 0px;
     margin: 30px;
     left: 0px;
 }
-.align {
+#new {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
-    font-size: 40px;
+    font-size: 50px;
+}
+.align {
+    /* text-align: center; */
+    font-size: 25px;
+    height: 30px;
+    width: 40px;
+    padding: 5px;
+    border-radius: 15px;
+    background-color: black;
+    color: whitesmoke;
 }
 .gg {
     width: 100vw;
@@ -73,12 +93,89 @@ top: 0px;
 }
       
 .p{position: absolute;
-    bottom: 20px;
+    bottom: 140px;
+    font-size: 20px;
+    color: rgb(0, 0, 0);
+    left: 10px;
 }
-p{
-    color: aliceblue;
-}
+
 .zurg {
     width: 100vw;
-    height: 900px;
+    height: 700px;
+    margin: 10px;
+}
+.h2 {
+    position: absolute;
+bottom: 90px;
+color: rgb(0, 0, 0);
+font-size: 20px;
+left: 10px;
+}
+.h3{
+    position: absolute;
+    color: white;
+    bottom: 50px;
+    font-size: 19px;
+    left: 10px;
+    background-color: black;
+    border-radius: 15px;
+   height: 30px;
+  
+}
+.cont {
+position: relative;    
+}
+.h {
+    position: absolute;
+    bottom: 20px;
+    left: 10px;
+    color:wheat ;
+}
+#i {
+    width: 100vw;
+    height: 800px;
+}
+.tee {
+    text-align: center;
+}
+.edit {
+    font-size: 25px;
+    height: 30px;
+    width: 40px;
+    padding: 5px;
+    border-radius: 15px;
+    background-color: black;
+    color: whitesmoke;
+}
+#ddd {
+    margin: 10px;
+    width: 100vw;
+}
+.img {
+    width: 24vw;
+    height: 200px;
+    margin: 8px;
+    border-radius: 40px;
+    background-color: beige;
+}
+.dis {
+    display: flex;
+}
+.cl {
+    background-color: aquamarine;
+    border-radius: 30px;
+    margin: 1px;
+    bottom: 10px;
+}
+.tt {
+   
+    margin: 10px;
+   
+    
+}
+.cc {
+    display: flex;
+    position: relative;
+    
+   
 }
