--- a/nike.css
+++ b/nike.css
@@ -159,25 +159,32 @@ position: relative;
     width: 100vw;
 }
 .img {
-    width: 24vw;
-    height: 200px;
-    margin: 8px;
+    width: 23vw;
+    height: 350px;
+    margin: 5px;
     border-radius: 40px;
     background-color: beige;
 }
 .dis {
     display: flex;
+    justify-content: center;
+    
 }
 .cl {
-    background-color: aquamarine;
+    background-color: white;
     border-radius: 30px;
-    margin: 1px;
+    margin: 5px;
     bottom: 10px;
-    left: 5px;
+    left: 20px;
+    position: relative;
 }
 .kk {
     
     left: 15px;
+    text-align: center;
+    position: absolute;
+    top: 5px;
+    left: 140px;
 }
 .tt {
    
@@ -200,10 +207,17 @@ position: relative;
     display: flex;
     position: relative;
    }
+ul {
+    list-style-type: none;
+}
+ 
+.il {
+    display: flex;
+}
 
-
-
-
+.ul {
+    padding: 50px;
+}
 
 
 
