--- a/indeex.css
+++ b/indeex.css
@@ -1,3 +1,18 @@
+body {
+    @media screen and (max-width: 600px) {
+
+    }
+    
+    @media screen and (min-width: 600px)
+    and (max-width: 600px) {
+    
+    }
+    
+    
+}
+
+
+
 .top {
     background-color: wheat;
     height: 60px;
@@ -58,11 +73,23 @@ a {
     width: 280px;
     background-color: black;
     margin: 10px;
+    position: relative;
 }
 
 .boo {
     height: 100px;
     width: 220px;
 background-color: aliceblue;
-left: 20px;
+left: 30px;
+position: absolute;
+top: 20px;
+}
+
+.bxx {
+    position: absolute;
+    width: 220px;
+    height: 50px;
+    bottom: 10px;
+    left: 30px;
+    background-color: blue;
 }
