--- a/nike.css
+++ b/nike.css
@@ -1,4 +1,17 @@
-.center {
+body {
+    @media screen and (max-width: 600px) {
+
+    }
+    
+    @media screen and (min-width: 600px)
+    and (max-width: 600px) {
+    
+    }
+    
+    
+}
+
+  .center {  
     text-align: center;
   margin: 15px;  
   font-size: 25px;
@@ -60,12 +73,13 @@ margin: 25px;
     justify-content: space-between;
     align-items: center;
 background-color: white;
-width: 100%;
+width: 100vw;
 top: 0px;
+left: 0;
 }
 .hehehe {
-    margin: 30px;
-    left: 0px;
+margin-top: 46px;
+     left: 0px;
     width: 100vw;
 }
 #new {
@@ -83,6 +97,14 @@ top: 0px;
     background-color: black;
     color: whitesmoke;
 }
+.poll {
+   display: flex;
+}
+#wii {
+    width: 50vw;
+   
+}
+
 .gg {
     width: 100vw;
     height: 700px;
@@ -99,8 +121,9 @@ top: 0px;
      position: relative;
      
 }
+
 .p{position: absolute;
-    bottom: 140px;
+    bottom: 180px;
     font-size: 20px;
     color: rgb(0, 0, 0);
     left: 100px;
@@ -130,13 +153,27 @@ left: 10px;
   
 }
 .cont {
-position: relative;    
+   
+display: flex;
+}
+.oo {
+    position: relative;
+    display:flex ;
 }
 .h {
     position: absolute;
     bottom: 140px;
     left: 100px;
     color:wheat ;
+}
+.t {
+    position: absolute;
+    right: 200px;
+    bottom: 120px;
+}
+.p {
+    position: absolute;
+    bottom: 60px;
 }
 #i {
     width: 100vw;
@@ -216,11 +253,70 @@ ul {
 }
 
 .ul {
-    padding: 50px;
+    padding: 10px;
 }
 
+@media only screen and (max-width: 900px) {
+    body {
+      background-color: lightblue;
+    }
+    .container {
+        width: 100vw;
+    }
+    img {
+        width: 100vw;
+        
+    }
+    .zurg {
+        object-fit: contain;
+        height: 270px;
+    }
+    .logo {
+        width: 60px;
+    }
+    strong {
+       font-size: 15px;  
+}
+.sea {
+    height: 30px;
+    width: 100px;
+}
+.img {
+    object-fit: contain;
+    height: 90px;
+}
+.tt {
+    width: 33vw;
+    object-fit: contain;
+}
+.p {
+    left: 20px;
+}
+p {
+    font-size: 15px;
+left: 10px;
+padding: 0;
+}
+h2 {
+    font-size: 15px;
+}
+.jorrrr {
+    height: 150px;
+}
+.t {
+    right: 35px;
+    bottom: 10px;
+}
+.h {
+    bottom: 10px;
+    left: 5px;
+}
+.kk {
+    left: 10px;
+    font-size: 5px;
+}
+.ee {
+    flex-direction: column;
+}
 
-
-
-
-   
+}   
