--- a/nike.css
+++ b/nike.css
@@ -130,7 +130,7 @@ margin-top: 46px;
 }
 
 .zurg {
-    width: 100vw;
+   wid
     height: 700px;
     margin: 10px;
 }
@@ -257,9 +257,9 @@ ul {
 }
 
 @media only screen and (max-width: 900px) {
-    body {
-      background-color: lightblue;
-    }
+    
+    
+
     .container {
         width: 100vw;
     }
