--- a/indeex.css
+++ b/indeex.css
@@ -8,32 +8,37 @@ body {
     
     }
     
-    .roboto-thin {
-        font-family: "Roboto", sans-serif;
-        font-weight: 100;
-        font-style: normal;
-      }
+    
 }
 .top {
     background-color: rgb(255, 255, 255);
     height: 60px;
    display: flex;
+   
    justify-content: space-between;
+   posi
     
 }
 .zuun {
     background-color: rgb(255, 255, 255);
-   
+    font-family: "Roboto", sans-serif;
+  
   flex: 1;
 width: 100px;
     
 }
 .useg a{background-color: rgb(255, 255, 255);}
+.h1 {
+    height: 40px;
+}
 .h{
-    height: 50px;
+    height: 60px;
 }
 #nah {
-    font-family: r;
+    font-family: "Roboto", sans-serif;
+  font-weight: 500;
+ font-size: 23px;
+    
 }
 
 .usee {
@@ -42,13 +47,30 @@ width: 100px;
     align-items: center;
 }
 
-#use {
-    height: 30px;
+.use {
+    display: flex;
+    align-items: center;
+    left: 10px;
+    height: 40px;
     width: 600px;
     background-color: rgb(255, 255, 255);
-    border-radius: 5px;
+    font-family: "Roboto", sans-serif;
     border: 1px solid;
 } 
+
+
+.search {
+    height: 40px;
+    width: 80px;
+    border: 1px solid;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+#mic {
+    height: 40px;
+    width: 50px;
+}
 
 .usg a {
     background-color: rgb(255, 255, 255);
@@ -64,7 +86,8 @@ width: 100px;
       display: flex;
       justify-content: center;
       align-items: center;
-    
+      font-family: "Roboto", sans-serif;
+      font-size: 18px;
     width: 90px;
     height: 40px;
     border: 1px solid;
@@ -74,7 +97,7 @@ width: 100px;
 .baruun {
   flex: 6;
     background-color: bisque;
-  
+  display: ;
     
 }
 .contt {
@@ -102,7 +125,7 @@ a {
 }
 
 .gr {
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(131, 130, 130);
     
     height: 4vw;
     display: flex;
@@ -131,6 +154,7 @@ a {
     background-color: yellow;
    display: flex;
    justify-content: space-around;
+  
 }
 
 .box {
@@ -158,6 +182,7 @@ top: 20px;
     left: 30px;
     background-color: blue;
     display: flex;
+    align-items: center;
 }
 .bb {
     background-color: azure;
