--- a/indeex.css
+++ b/indeex.css
@@ -9,6 +9,7 @@ body {
     }
     
     
+
 }
 .top {
     background-color: rgb(255, 255, 255);
@@ -18,20 +19,29 @@ body {
    justify-content: space-between;
    position: fixed;
     top: 0;
+    margin-right: 105x;
+}
+.hea {
+    position: fixed;
 }
 .zuun {
     background-color: rgb(255, 255, 255);
     font-family: "Roboto", sans-serif;
-  
-  flex: 1;
-width: 30px;
-    
+  position: fixed;
+  height: 100vw;
+width: 13vw;
+    margin-top: 60px;
 }
+
 .useg a{background-color: rgb(255, 255, 255);}
 .h1 {
     height: 40px;
 }
-.h{
+h3 {
+    margin-left: 10px;
+}
+
+.h {
     height: 60px;
 }
 #nah {
@@ -45,19 +55,41 @@ width: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
+    /* position: ; */
+    
+    
 }
-
+.videos{
+    top: 0;
+    width: 100vw;
+    height: 200px;
+    border-radius: 10px; hdf
+}
+header{z-index: 1;}
 .use {
     display: flex;
     align-items: center;
-    left: 10px;
+    left: 40px;
+    height: 40px;
+    width: 600px;
+    background-color: rgb(255, 255, 255);
+    
+    border: 1px snow;
+    color: #606060;
+} 
+
+.uu {
+    display: flex;
+    align-items: center;
+    left: 40px;
     height: 40px;
     width: 600px;
     background-color: rgb(255, 255, 255);
     
     border: 1px solid;
     color: #606060;
-} 
+}
+
 
 .flex:hover {
     background-color: whitesmoke;
@@ -69,7 +101,7 @@ width: 30px;
 .search {
     height: 40px;
     width: 80px;
-    border: 1px solid;
+    border: 1px snow;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 }
@@ -102,9 +134,9 @@ width: 30px;
 }
 
 .baruun {
-  flex: 8;
+  flex: 87vw;
     background-color: bisque;
-  display: ;
+margin-left: 13vw;
     
 }
 .contt {
@@ -150,6 +182,8 @@ a {
     border-radius: 6px;
     background-color: beige;
     text-align: center;
+    font-size: 20px;
+    font-family: "Roboto", sans-serif;
 }
 
 .bl {
@@ -162,6 +196,7 @@ a {
    display: flex;
    justify-content: space-around;
    height: 330px;
+  flex-wrap: wrap;
   
 }
 
@@ -171,6 +206,7 @@ a {
     background-color: black;
     margin: 10px;
     position: relative;
+    
 }
 
 .boo {
@@ -220,6 +256,13 @@ position: absolute;
 }
 .flex {
   display: flex;
+color: #606060;
+}
+.flx  {
+    
+
+
+
 }
 
 #out {
