--- a/indeex.css
+++ b/indeex.css
@@ -3,10 +3,39 @@ body {
 
     }
     
-    @media screen and (min-width: 600px)
-    and (max-width: 600px) {
-    
+    @media screen and (min-width: 320px)
+    and (max-width: 480px) {
+    .box1 {
+        display: flex;
+        flex-wrap: wrap;
+        
+        height: 320px;
     }
+
+
+.box {
+    
+
+}
+
+    .zuun{
+    /* width: 330px; */
+    display: flex;
+    display: hidden;
+     
+    }
+
+    .di{
+        /* width: 330px; */
+        display: flex;
+        display: hidden;
+    
+        }
+
+
+    }
+
+
     
     
 
@@ -60,10 +89,11 @@ h3 {
     
 }
 .videos{
-    top: 0;
-    width: 100vw;
-    height: 200px;
-    border-radius: 10px; hdf
+  
+    width: 378px;
+    height: 212px;
+    border-radius: 10px; 
+    
 }
 header{z-index: 1;}
 .use {
@@ -87,7 +117,7 @@ header{z-index: 1;}
     background-color: rgb(255, 255, 255);
     
     border: 1px solid;
-    color: #606060;
+    color: #666262;
 }
 
 
@@ -119,6 +149,7 @@ header{z-index: 1;}
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    margin-right: 25px;
 }
 
 .he {
@@ -177,10 +208,14 @@ a {
     align-items: center;
     
 }
-.ko {
 
-    border-radius: 6px;
+.ko:hover {
     background-color: beige;
+} 
+
+.ko {
+    border-radius: 6px;
+    background-color: rgb(255, 255, 255);
     text-align: center;
     font-size: 20px;
     font-family: "Roboto", sans-serif;
@@ -192,7 +227,7 @@ a {
 }
 
 .box1 {
-    background-color: yellow;
+    background-color: rgb(255, 255, 255);
    display: flex;
    justify-content: space-around;
    height: 330px;
@@ -206,11 +241,11 @@ a {
     background-color: black;
     margin: 10px;
     position: relative;
-    
+    flex-wrap: wrap;
 }
 
 .boo {
-    height: 312px;
+    height: 212px;
     width: 378px;
 background-color: aliceblue;
 display: flex;
@@ -260,9 +295,12 @@ color: #606060;
 }
 .flx  {
     
-
-
-
+display: flex;
+justify-content: center;
+border: 1px solid blue;
+color: blue;
+width: 120px;
+border-radius: 30px;
 }
 
 #out {
@@ -271,6 +309,7 @@ color: #606060;
     border-radius: 40px;
 }
 video {
+
     height: 322px;
     width: 378px;
 }
@@ -286,4 +325,8 @@ video {
     margin: 3px;
     font-family: "Roboto", sans-serif;
     color: #606060;
+}
+
+#goos  {
+    top: 0;
 }
